--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,6 +15,8 @@ jobs:
 
       - name: Install Ansible
         run: sudo apt-get update && sudo apt-get install -y ansible
+       - name: Install sshpass
+        run: sudo apt-get update && sudo apt-get install -y sshpass
 
       - name: Configure SSH key
         run: |
@@ -29,4 +31,5 @@ jobs:
 
       - name: Run Ansible playbook
         run: |
-          ansible-playbook -i inventory windowsplaybook.yaml
+           ansible -i inventory -m win_ping win
+          //ansible-playbook -i inventory windowsplaybook.yaml
