--- a/.github/workflows/newtest.yaml
+++ b/.github/workflows/newtest.yaml
@@ -28,7 +28,8 @@ jobs:
         with:
           ssh-private-key: |
             ${{ secrets.SSH_PRIVATE_KEY }}
-
+      - name: Connect to Windows
+        run: ssh Administrator@3.93.9.112 echo "Connected!"
 
      
       - name: Run Ansible playbook
