--- a/.github/workflows/newtest.yaml
+++ b/.github/workflows/newtest.yaml
@@ -28,8 +28,8 @@ jobs:
         with:
           ssh-private-key: |
             ${{ secrets.SSH_PRIVATE_KEY }}
-      - name: Connect to Windows
-        run: ssh Administrator@3.84.53.104 echo "Connected!"
+      - name: Connect to Control node
+        run: ssh ubuntu@SSHCTRL echo "Connected!"
 
      
       - name: Run Ansible playbook
