--- a/.github/workflows/newtest.yaml
+++ b/.github/workflows/newtest.yaml
@@ -32,3 +32,4 @@ jobs:
       - name: Run Ansible playbook
         run: |
            ansible -i inventory -m win_ping win
+           ansible -i inventory windowsplaybook.yaml
