--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -24,4 +24,4 @@ jobs:
 
       - name: Run Ansible Playbook
         run: |
-          ansible-playbook -i inventory windowsplaybook.yaml
+          ansible-playbook windowsplaybook.yaml
