--- a/.github/workflows/selfhostedwsl.yml
+++ b/.github/workflows/selfhostedwsl.yml
@@ -14,5 +14,5 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run Ansible Playbook
-        run: |
-          wsl ansible-playbook windows-playbook.yaml
+        run: 
+        ansible-playbook windows-playbook.yaml
