--- a/.github/workflows/selfhostedwsl.yml
+++ b/.github/workflows/selfhostedwsl.yml
@@ -1,7 +1,10 @@
-name: Ansible Playbook
+name: Execute Ansible Playbook
 
 on:
   push:
+    branches:
+      - main
+  pull_request:
     branches:
       - main
 
@@ -10,9 +13,9 @@ jobs:
     runs-on: self-hosted
 
     steps:
-      - name: Checkout code
+      - name: Check out repository
         uses: actions/checkout@v2
 
-      - name: Run Ansible Playbook
-        run: 
-        ansible-playbook windows-playbook.yaml
+      - name: Execute Ansible playbook
+        run: |
+          ansible-playbook playbook.yml
