--- a/.github/workflows/selfhostedwsl.yml
+++ b/.github/workflows/selfhostedwsl.yml
@@ -15,6 +15,10 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
+        - name: Set up WSL1
+        shell: pwsh
+        run: |
+          Enable-WindowsOptionalFeature -Online -FeatureName Microsoft-Windows-Subsystem-Linux
 
       - name: Execute Ansible playbook
         run: |
