--- a/.github/workflows/winselfhosted.yml
+++ b/.github/workflows/winselfhosted.yml
@@ -1,32 +1,28 @@
-name: Run Playbook windows via selfhostedrunner updated
+name: Execute Playbook
 
 on:
   push:
     branches:
       - main
 
-
 jobs:
-  install:
+  build:
     runs-on: self-hosted
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-   - name: Set up Python
-     uses: actions/setup-python@v2
-     with:
-     python-version: '3.9'
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
 
-    - name: Install pip
-      run: |
-        python -m pip install --upgrade pip
+      - name: Install Ansible
+        run: |
+          sudo apt update
+          sudo apt install -y ansible
 
-    - name: Install Ansible
-      run: |
-        pip install ansible
-
-    - name: Run Ansible Playbook
-      run: |
-        ansible-playbook windowsplaybook.yaml
+      - name: Execute playbook
+        run: |
+          ansible-playbook windowsplaybook.yml
