--- a/.github/workflows/winselfhosted.yml
+++ b/.github/workflows/winselfhosted.yml
@@ -11,12 +11,11 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
-        with:
-        python-version: 'pypy3.9' 
+        python-version: '3.10'  
 
       - name: Install Ansible
         run: |
