--- a/.github/workflows/winselfhosted.yml
+++ b/.github/workflows/winselfhosted.yml
@@ -15,7 +15,8 @@ jobs:
 
       - name: Set up Python
         uses: actions/setup-python@v4
-        python-version: '3.10'  
+        with:
+          python-version: '3.10'
 
       - name: Install Ansible
         run: |
