--- a/.github/workflows/selfhostedrunner.yml
+++ b/.github/workflows/selfhostedrunner.yml
@@ -28,6 +28,9 @@ jobs:
         with:
           ssh-private-key: |
             ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: Print inventiry
+        run: |
+          cat inventory
 
       - name: Run Ansible playbook
         run: |
