--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,8 +32,8 @@ jobs:
       - name: Create inventory file
         run: |
           
-          echo "winhost==${{ secrets.WIN_HOST }}"
-                "winuser=${{ secrets.WIN_USER }} "
+          echo "winhost=${{ secrets.WIN_HOST }}"
+                "winuser=${{ secrets.WIN_USER }}"
                 "winpassword=${{ secrets.WIN_PASSWORD}}" >> $GITHUB_ENV
                 
       - name: Use declared variable
