--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,10 +30,10 @@ jobs:
             ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Create and print required user variables
-        env:
-          winhost: ${{ secrets.WIN_HOST }}
-          winuser: ${{ secrets.WIN_USER }}
-          winpassword: ${{ secrets.WIN_PASSWORD }}
+        id: set_variable
+          winhost="${{ secrets.WIN_HOST }}"
+          winuser="${{ secrets.WIN_USER }}"
+          winpassword="${{ secrets.WIN_PASSWORD }}"
         run: |
           echo "The value of winhost is $winhost"
           
