--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,9 +32,9 @@ jobs:
       - name: Create required user variables
         id: set_var
         run: |
-           winhost="${{ secrets.WIN_HOST }}"
-           winuser= "${{ secrets.WIN_USER }}"
-           winpassword= "${{ secrets.WIN_PASSWORD }}"
+           winhost:"${{ secrets.WIN_HOST }}"
+           winuser:"${{ secrets.WIN_USER }}"
+           winpassword:"${{ secrets.WIN_PASSWORD }}"
            
       - name: Print the assigned variable
         run: |
