--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,10 +31,12 @@ jobs:
             ${{ secrets.SSH_PRIVATE_KEY }}
            
            
-      - name: Use declared variable
+      - name: Configure inventory
+        env:
+         WIN_HOST: 54.210.122.0
         run: |
                 echo "[win]
-                54.210.122.0
+                {{ env.WIN_HOST }}
                 [win:vars]
                 ansible_user=${{ secrets.WIN_USER }}
                 ansible_password=${{ secrets.WIN_PASSWORD }}" > inventory.ini
