--- a/.github/workflows/dynamic.yaml
+++ b/.github/workflows/dynamic.yaml
@@ -45,7 +45,7 @@ jobs:
                         ansible_host: 44.201.169.219" > inventory_aws_ec2.yaml
       - name: Setup ansible configuration file with the required inventory
         run: |
-          touch /etc/ansible/ansible.cfg
+          sudo touch /etc/ansible/ansible.cfg
           echo "[defaults]
           enable_plugins = aws_ec2" >/etc/ansible/ansible.cfg
           
