--- a/.github/workflows/newwrk.yml
+++ b/.github/workflows/newwrk.yml
@@ -34,6 +34,6 @@ jobs:
         run: |
            python3 --version
            sudo apt-get install python3-pip -y
-           sudo apt-get install pywinrm
+           sudo apt-get -y install python3-winrm
            sudo apt-get install python-boto3
           
