--- a/.github/workflows/newwrk.yml
+++ b/.github/workflows/newwrk.yml
@@ -61,4 +61,5 @@ jobs:
              instance-state-name : running
              tag:type: mywinnode
              compose:
-                ansible_host: public_ip_address" > ec2.yaml
+                ansible_host: public_ip_address" > aws_ec2.yaml
+              cat aws_ec2.yaml
