--- a/.github/workflows/newwrk.yml
+++ b/.github/workflows/newwrk.yml
@@ -69,3 +69,7 @@ jobs:
            enable_plugins = aws_ec2
            inventory = /opt/ansible/inventory/aws_ec2.yaml" | sudo tee -a /etc/ansible/ansible.cfg
            cat /etc/ansible/ansible.cfg
+           
+      - name: Check the dynamic inventory
+        run: |
+           ansible all --list-hosts
