--- a/.github/workflows/newwrk.yml
+++ b/.github/workflows/newwrk.yml
@@ -77,8 +77,8 @@ jobs:
       - name: Generate host file for dynamic inventory
         run: |
           cd /etc/ansible
-          sudo chmod +x inventory.sh
-          sudo sh inventory.sh
+          sudo chmod +x inventoryge.sh
+          sudo sh inventoryge.sh
           #Print inventory
           cat inventory.ini
  
