--- a/.github/workflows/newwrk.yml
+++ b/.github/workflows/newwrk.yml
@@ -83,7 +83,10 @@ jobs:
           cat inventory.ini
  
 
-      - name: Run Ansible playbook
+      - name: Check connectivity
         run: |
            ansible -i /etc/ansible/inventory.ini -m win_ping win
+           
+      - name: Run Ansible playbook
+        run: |
            ansible-playbook -i /etc/ansible/inventory.ini windowsplaybook.yaml
