--- a/.github/workflows/newwrk.yml
+++ b/.github/workflows/newwrk.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Add Repo Ansible
         run: |
-          sudo apt-get update && sudo apt install software-properties-common && sudo apt-add-repository --yes --update ppa:ansible/ansible
+          sudo apt-get update && sudo apt-get install software-properties-common -y && sudo apt-add-repository --yes --update ppa:ansible/ansible
      
       - name: Install  Ansible and Check version
         run: |
