--- a/.github/workflows/newwrk.yml
+++ b/.github/workflows/newwrk.yml
@@ -71,7 +71,7 @@ jobs:
            
       - name: Check the dynamic inventory 
         run: |
-           ansible all --list-hosts
+           ansible-inventory --list
            
       - name: Generate host file for dynamic inventory
         run: |
